@@ -1,5 +1,8 @@
 2007-01-11  Shawn Betts  <sabetts@vcn.bc.ca>
 
+	* user.lisp ("putsel"): new command
+	("getsel"): likewise
+
 	* stumpwm.asd: properly error out when clx isn't detected.
 
 2007-01-09  Shawn Betts  <sabetts@vcn.bc.ca>
